--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -3,6 +3,7 @@ name = "lib"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+directories = "3.0"
+sqlx = { version = "0.5", default-features = false, features = [ "sqlite", "chrono", "macros", "migrate", "runtime-tokio-rustls"] }
+tokio = { version = "1.6", features = [ "rt", "macros" ] }
