--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 directories = "3.0"
 sqlx = { version = "0.5", default-features = false, features = [ "sqlite", "chrono", "macros", "migrate", "runtime-tokio-rustls"] }
 tokio = { version = "1.6", features = [ "rt", "macros" ] }
+async-trait = "0.1"
